fixed nav z-index

--- a/story_database/static/css/app.css
+++ b/story_database/static/css/app.css
@@ -278,11 +278,11 @@ body {
 }
 
 #logo-li {margin-bottom: 0em; width: 21.68%; height: 160px; display: inline; background-size:30%; float: left;  }
-.logo-background{ margin-top: 60px; position:absolute; width: 100%; height:66%; z-index: -1; background-image:url("http://reinhardt.jomc.unc.edu/static/images/nav_bg.png");}
+.logo-background{ margin-top: 60px; position:absolute; width: 100%; height:66%; z-index: 0; background-image:url("http://reinhardt.jomc.unc.edu/static/images/nav_bg.png");}
 div.logo { max-width: 17%; padding-bottom: 6px; }
 #top-nav-li {text-align: right; margin-top: 100px; width:78.32%; float: left; display: inline; background-color: none; z-index: 10;}
 #top-nav-li ul {}
-#top-nav-li ul li { list-style-type: none; display: inline; border-right: 1px solid #fff; padding:0 1em;}
+#top-nav-li ul li { list-style-type: none; display: inline; position: relative; z-index:1; border-right: 1px solid #fff; padding:0 1em;}
 #top-cream-bar {text-align: left; margin-bottom: 0px; height: 40px; width:100%; float: right; display: inline; background-image: url(../images/content-top.png);background-repeat:repeat-x; background-color: #EAE5D7;}
 .hide{visibility: hidden;}
 .show{visibility: visible;}
